5.0.6
 * Fix range queries on early-open BTI files (CASSANDRA-20976)
 * Avoid re-initializing underlying iterator in LazilyInitializedUnfilteredRowIterator after closing (CASSANDRA-20972)
 * Flush SAI segment builder when current SSTable writer is switched (CASSANDRA-20752)
 * Throw RTE instead of FSError when RTE is thrown from FileUtis.write in TOCComponent (CASSANDRA-20917)
 * Upgrade jackson-dataformat-yaml to 2.19.2 and snakeyaml to 2.1 (CASSANDRA-18875)
 * Represent complex settings as JSON on system_views.settings table (CASSANDRA-20827)
 * Expose StorageService.dropPreparedStatements via JMX (CASSANDRA-20870)
 * Sort SSTable TOC entries for determinism (CASSANDRA-20494)
Merged from 4.1:
 * Redact security-sensitive information in system_views.settings (CASSANDRA-20856)
Merged from 4.0:
 * Fixed incorrect error message constant for keyspace name length validation (CASSANDRA-20915)
 * Prevent too long table names not fitting file names (CASSANDRA-20389)
 * Update Jackson to 2.19.2 (CASSANDRA-20848)
 * Update commons-lang3 to 3.18.0 (CASSANDRA-20849)
 * Add NativeTransportMaxConcurrentConnectionsPerIp to StorageProxyMBean (CASSANDRA-20642)
 * Make secondary index implementations notified about rows in fully expired SSTables in compaction (CASSANDRA-20829)


5.0.5
 * Do not source cassandra-env.sh unnecessarily in nodetool and other tooling (CASSANDRA-20745)
 * Make source distribution buildable by ant artifacts as doc/scripts/process-native-protocol-specs-in-docker.sh was not executable (CASSANDRA-20802)
 * Fix StorageService JMX mbean not available during bootstrap (CASSANDRA-19902)
 * SSTableIndexWriter#abort() should log more quietly in cases where an exception is not provided (CASSANDRA-20695)
 * Avoid availability gap between UP and queryability marking for already built SAI indexes on bounce (CASSANDRA-20732)
 * Make Commitlog flush data safely in Direct IO mode (CASSANDRA-20692)